--- a/package.json
+++ b/package.json
@@ -10,32 +10,36 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@angular/common": "2.0.0-rc.4",
-    "@angular/compiler": "2.0.0-rc.4",
-    "@angular/core": "2.0.0-rc.4",
-    "@angular/forms": "^0.2.0",
-    "@angular/http": "2.0.0-rc.4",
-    "@angular/platform-browser": "2.0.0-rc.4",
-    "@angular/platform-browser-dynamic": "2.0.0-rc.4",
-    "@angular/router": "3.0.0-beta.2",
-    "core-js": "^2.4.0",
-    "lodash": "^4.13.1",
-    "rxjs": "5.0.0-beta.6",
-    "zone.js": "^0.6.12"
+    "@angular/common": "^2.1.0",
+    "@angular/compiler": "^2.1.0",
+    "@angular/core": "^2.1.0",
+    "@angular/forms": "^2.1.0",
+    "@angular/http": "^2.1.0",
+    "@angular/platform-browser": "^2.1.0",
+    "@angular/platform-browser-dynamic": "^2.1.0",
+    "@angular/router": "^3.1.0",
+    "awesome-typescript-loader": "^2.2.4",
+    "core-js": "^2.4.1",
+    "css-loader": "^0.25.0",
+    "karma-chrome-launcher": "^2.0.0",
+    "lodash": "^4.16.4",
+    "rxjs": "^5.0.0-beta.12",
+    "typescript": "^2.0.3",
+    "zone.js": "^0.6.25"
   },
   "devDependencies": {
-    "awesome-typescript-loader": "1.0",
-    "css-loader": "^0.23.1",
-    "jasmine-core": "^2.4.1",
-    "karma": "^1.1.1",
-    "karma-chrome-launcher": "^1.0.1",
+    "awesome-typescript-loader": "^2.2.4",
+    "css-loader": "^0.25.0",
+    "jasmine-core": "^2.5.2",
+    "karma": "^1.3.0",
+    "karma-chrome-launcher": "^2.0.0",
     "karma-jasmine": "^1.0.2",
-    "karma-mocha-reporter": "^2.0.4",
+    "karma-mocha-reporter": "^2.2.0",
     "raw-loader": "^0.5.1",
-    "to-string-loader": "^1.1.4",
-    "ts-helpers": "^1.1.1",
-    "typescript": "^1.8.10",
-    "webpack": "^1.13.1",
-    "webpack-dev-server": "^1.14.1"
+    "to-string-loader": "^1.1.5",
+    "ts-helpers": "^1.1.2",
+    "typescript": "^2.0.3",
+    "webpack": "^1.13.2",
+    "webpack-dev-server": "^1.16.2"
   }
 }
