--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "webpack --config webpack.spec.ts --progress --color && karma start",
-    "start": "webpack-dev-server --inline --colors --progress --display-error-details --display-cached --port 3000  --content-base src"
+    "start": "webpack-dev-server --inline --colors --progress --display-error-details --display-cached --port 3000  --content-base src",
+    "api": "angularclass-server --api retain --port 3500"
   },
   "author": "",
   "license": "ISC",
@@ -28,6 +29,7 @@
     "zone.js": "^0.6.25"
   },
   "devDependencies": {
+    "@angularclass/api": "^1.2.0",
     "awesome-typescript-loader": "^2.2.4",
     "css-loader": "^0.25.0",
     "jasmine-core": "^2.5.2",
