--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "webpack --config webpack.spec.ts --progress --color && karma start",
-    "start": "webpack-dev-server --inline --colors --progress --display-error-details --display-cached --port 3000  --content-base src",
-    "api": "angularclass-server --api retain --port 3500"
+    "start": "webpack-dev-server --inline --colors --progress --display-error-details --display-cached --port 3000 --host 0.0.0.0  --content-base src",
+    "api": "angularclass-server --api retain --port 3500 --auth"
   },
   "author": "",
   "license": "ISC",
