--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "webpack --config webpack.spec.ts --progress --color && karma start",
     "start": "webpack-dev-server --inline --colors --progress --display-error-details --display-cached --port 3000 --host 0.0.0.0  --content-base src",
-    "api": "angularclass-server --api retain --port 3500 --auth"
+    "api": "angularclass-server --api retain --port 3500 --host 0.0.0.0 --auth"
   },
   "author": "",
   "license": "ISC",
